# base-package

./: README.md  pyproject.toml  requirements.txt
package_name/: example.py
